--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -49,6 +49,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">MAINTENANCE</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'supply_chain:main_dashboard' %}">SUPPLY CHAIN</a>
+                    </li>
 
                     <li class="nav-item">
                         <a class="nav-link disabled" href="#" tabindex="-1" 
