--- a/templates/supply_chain/main_dashboard.html
+++ b/templates/supply_chain/main_dashboard.html
@@ -26,7 +26,7 @@
             <div class="row py-3">
                 <a href="{% url 'supply_chain:dashboard' %}">
                     <button type="button" class="btn btn-primary 
-                        addCoil col-md-2" data-bs-toggle="modal" 
+                        addCoil col-md-2 searchBtn" data-bs-toggle="modal" 
                         data-bs-target="#createCoilForm">Transfer coil
                     </button>
                 </a>
@@ -75,7 +75,7 @@
                                 <div class="row option-buttons">
                                     <div class="DSAFD">
                                         <button type="button" class="btn btn-primary 
-                                            tranferMaterial" data-bs-toggle="modal" 
+                                            tranferMaterial searchBtn" data-bs-toggle="modal" 
                                             data-bs-target="#transferCoilForm">Details
                                         </button>
                                     </div>
