--- a/templates/base.html
+++ b/templates/base.html
@@ -53,6 +53,8 @@
     <script src="{% static 'main/js/jquery/jquery-3.5.1.min.js' %}" ></script>
     <script src="{% static 'main/js/bootstrap/bootstrap.bundle.min.js' %}" ></script>
     <script src="{% static 'bootstrap-5.0.0-beta1-dist/js/bootstrap.bundle.min.js' %}" ></script>
+    <link rel="stylesheet" href="{% static 'main/css/buttons.css' %}">
+
 
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
    
