--- a/static/production/css/supervisor_dashboard.css
+++ b/static/production/css/supervisor_dashboard.css
@@ -70,8 +70,9 @@ aside li {
 }
 
 .secondary-nav-bar li:hover {
-    color: var(--ubl-blue);
-    background-color: var(--ubl-white);
+    color: var(--ubl-white);
+    background-color: var(--ubl-orange);
+    text-decoration: none;
     font-weight: bold;
     cursor: pointer;
     transition: 0.3s;
