--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -42,8 +42,23 @@
                         </ul>
                     </li>
 
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">QUALITY</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            QUALITY
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" 
+                                    href="{%  url 'quality:dashboard' %}">
+                                Dashboard
+                                </a>
+                            </li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" 
+                                    href="{%  url 'quality:reconsiliation' %}">
+                                Reconsiliation
+                                </a>
+                            </li>
+                        </ul>
                     </li>
 
                     <li class="nav-item">
