added more changes to performance report

--- a/templates/production/supervisor/manpower_list.html
+++ b/templates/production/supervisor/manpower_list.html
@@ -154,6 +154,11 @@
                             </div>
                         </div>
                         <div class="col-md-12">
+                            <label for="shiftDate" class="form-label">Shift date</label>
+                            <input type="date" class="form-control" id="shiftDate"
+                                name="operator" required>
+                        </div>
+                        <div class="col-md-12">
                             <label for="inputShift" class="form-label">Shift</label>
                             <select id="inputShift" class="form-select" 
                                 name="shift" required>
