--- a/templates/partials/_sidebar.html
+++ b/templates/partials/_sidebar.html
@@ -21,10 +21,12 @@
             </li>
 
             <li class="p-2 col-lg-12 mt-3">
-                <div class="mr-2">
-                    <i class="fas fa-chart-bar"></i>
-                    <span class="nav_icon_text p-2">Capacity</span>
-                </div>
+                <a href="{%  url 'production:performance_list' %}">
+                    <div class="mr-2">
+                        <i class="fas fa-chart-bar"></i>
+                        <span class="nav_icon_text p-2">Capacity</span>
+                    </div>
+                </a>
             </li>
 
             <li class="p-2 col-lg-12 mt-3">
