--- a/templates/production/material_page.html
+++ b/templates/production/material_page.html
@@ -17,6 +17,7 @@
             <div class="row">
                 <h5 class="card-title col-6">{{machine.machine_name}} {{machine.machine_number}}</h5>
                 <h5 class="card-title col-6">{{machine.machine_serial_number}}</h5>
+                <h5 class="card-title col-6 home-url" hidden>{{home_url}}</h5>
                 <!-- <p class="card-text">Arnold </p> -->
             </div>
             <div class="row">
