added "order-id" to material_page.html

--- a/templates/production/material_page.html
+++ b/templates/production/material_page.html
@@ -18,6 +18,7 @@
                 <h5 class="card-title col-6">{{machine.machine_name}} {{machine.machine_number}}</h5>
                 <h5 class="card-title col-6">{{machine.machine_serial_number}}</h5>
                 <h5 class="card-title col-6 home-url" hidden>{{home_url}}</h5>
+                <h5 class="card-title col-6" id="order-id" hidden>{{order_id}}</h5>
                 <!-- <p class="card-text">Arnold </p> -->
             </div>
             <div class="row">
